--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -5,7 +5,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
     <title>Third laboratory</title>
@@ -184,93 +186,112 @@
 </h:head>
 
 <body>
-    <header>
-            <span>Сущенко Роман Витальевич, группа P32131, вариант 3198</span>
-    </header>
-    <div class="data">
-        <div class="left_data">
-            <!-- graph div -->
-            <div id="jxgbox" class="jxgbox">
-            </div>
-            <!-- form div -->
-            <div>
-                <h:form method="post" id="form">
-                    <fieldset>
-                        <legend>Check hit</legend>
-                        <div class="form-field">
-                            <span>Choose X:</span>
-                            <h:selectOneMenu value="#{dotBean.x}" id="x_value">
-                                <f:selectItem itemValue="-2" itemLabel="-2"/>
-                                <f:selectItem itemValue="-1.5" itemLabel="-1.5"/>
-                                <f:selectItem itemValue="-1" itemLabel="-1"/>
-                                <f:selectItem itemValue="-0.5" itemLabel="-0.5"/>
-                                <f:selectItem itemValue="0" itemLabel="0"/>
-                                <f:selectItem itemValue="0.5" itemLabel="0.5"/>
-                                <f:selectItem itemValue="1" itemLabel="1"/>
-                                <f:selectItem itemValue="1.5" itemLabel="1.5"/>
-                            </h:selectOneMenu>
-                            <div>
-                                <small></small>
-                            </div>
-                        </div>
-                        <div class="form-field">
-                            <span>Enter Y:</span>
-                            <h:inputText value="#{dotBean.y}" id="y_value"/>
-                            <div>
-                                <small></small>
-                            </div>
-                        </div>
-                        <div class="r_buttons">
-                            <span>Choose R:</span>
-                            <h:commandButton type="button" value="1"/>
-                            <h:commandButton type="button" value="1.5"/>
-                            <h:commandButton type="button" value="2"/>
-                            <h:commandButton type="button" value="2.5"/>
-                            <h:commandButton type="button" value="3"/>
-                            <h:inputHidden id="r_value" value="#{dotBean.r}"/>
-                            <div>
-                                <small></small>
-                            </div>
-                        </div>
-                        <h:inputHidden id="timezone" value="${dotBean.timezone}"/>
-                        <div class="submit_buttons">
-                            <h:commandButton value="Отправить" action="#{dotBean.processRequest()}" type="submit" onclick="set_timezone()">
-                                <f:ajax execute="x_value y_value r_value timezone" render="table"/>
-                            </h:commandButton>
-                        </div>
-                    </fieldset>
-                </h:form>
-            </div>
+<header>
+    <span>Сущенко Роман Витальевич, группа P32131, вариант 3198</span>
+</header>
+<div class="data">
+    <div class="left_data">
+        <!-- graph div -->
+        <div id="jxgbox" class="jxgbox">
         </div>
-        <div class="right_data">
-            <h:dataTable styleClass="result_table" value="#{dotBean.listContainer.dotsList}" var="entry" id="table">
-                <h:column>
-                    <f:facet name="header">X</f:facet>
-                    <h:outputText value="#{entry.x}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Y</f:facet>
-                    <h:outputText value="#{entry.y}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">R</f:facet>
-                    <h:outputText value="#{entry.r}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Hit</f:facet>
-                    <h:outputText value="#{entry.hit}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Local time</f:facet>
-                    <h:outputText value="#{entry.creationDate}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Script working time</f:facet>
-                    <h:outputText value="#{entry.workingTime}"/>
-                </h:column>
-            </h:dataTable>
+        <!-- form div -->
+        <div>
+            <h:form method="post" id="form">
+                <fieldset>
+                    <legend>Check hit</legend>
+                    <div class="form-field">
+                        <span>Choose X:</span>
+                        <h:inputHidden id="x_value" value="#{dotBean.x}"/>
+                        <h:selectOneMenu id="selector">
+                            <f:selectItem itemValue="-2" itemLabel="-2"/>
+                            <f:selectItem itemValue="-1.5" itemLabel="-1.5"/>
+                            <f:selectItem itemValue="-1" itemLabel="-1"/>
+                            <f:selectItem itemValue="-0.5" itemLabel="-0.5"/>
+                            <f:selectItem itemValue="0" itemLabel="0"/>
+                            <f:selectItem itemValue="0.5" itemLabel="0.5"/>
+                            <f:selectItem itemValue="1" itemLabel="1"/>
+                            <f:selectItem itemValue="1.5" itemLabel="1.5"/>
+                        </h:selectOneMenu>
+                        <div>
+                            <small></small>
+                        </div>
+                    </div>
+                    <div class="form-field">
+                        <span>Enter Y:</span>
+                        <h:inputText value="#{dotBean.y}" id="y_value"/>
+                        <div>
+                            <small></small>
+                        </div>
+                    </div>
+                    <div class="r_buttons">
+                        <span>Choose R:</span>
+                        <h:commandButton type="button" value="1.0"/>
+                        <h:commandButton type="button" value="1.5"/>
+                        <h:commandButton type="button" value="2.0"/>
+                        <h:commandButton type="button" value="2.5"/>
+                        <h:commandButton type="button" value="3.0"/>
+                        <h:inputHidden id="r_value" value="#{dotBean.r}"/>
+                        <div>
+                            <small></small>
+                        </div>
+                    </div>
+                    <h:inputHidden id="timezone" value="${dotBean.timezone}"/>
+                    <div class="submit_buttons">
+                        <h:commandButton value="Отправить" action="#{dotBean.processRequest()}" type="submit"
+                                         onclick="set_timezone()">
+                            <f:ajax execute="x_value y_value r_value timezone" render="table script"/>
+                        </h:commandButton>
+                    </div>
+                    <h:panelGroup id="script">
+                        <h:outputScript>
+                            function updatePoints() {
+                            clearPoints();
+                            serverPoints = [
+                                <ui:repeat value="#{dotBean.listContainer.dotsList}" var="point">
+                                    {x: #{point.x}, y: #{point.y}, r: #{point.r}, hit: #{point.hit}},
+                                </ui:repeat>
+                            ];
+                            console.log(serverPoints);
+                            drawPointsByR($('.r_buttons input.pressed').val());
+                            }
+                            updatePoints();
+                            console.log("*************")
+                        </h:outputScript>
+                    </h:panelGroup>
+
+                </fieldset>
+            </h:form>
         </div>
     </div>
+    <div class="right_data">
+        <h:dataTable styleClass="result_table" value="#{dotBean.listContainer.dotsList}" var="entry" id="table">
+            <h:column>
+                <f:facet name="header">X</f:facet>
+                <h:outputText value="#{entry.x}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">Y</f:facet>
+                <h:outputText value="#{entry.y}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">R</f:facet>
+                <h:outputText value="#{entry.r}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">Hit</f:facet>
+                <h:outputText value="#{entry.hit}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">Local time</f:facet>
+                <h:outputText value="#{entry.creationDate}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">Script working time</f:facet>
+                <h:outputText value="#{entry.workingTime}"/>
+            </h:column>
+        </h:dataTable>
+    </div>
+</div>
 </body>
 
 </html>
