start with mispi lab3

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -3,11 +3,9 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--suppress CheckTagEmptyBody -->
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+        xmlns:f="http://java.sun.com/jsf/core"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
     <title>Third laboratory</title>
@@ -265,7 +263,7 @@
                             drawPointsByR($('.r_buttons input.pressed').val());
                             }
                             updatePoints();
-                            console.log("*************")
+                            console.log('*************');
                         </h:outputScript>
                     </h:panelGroup>
 
